--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>trishna-das-portfolio-showcase</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Trishna Das - Full Stack Developer & AI Engineer</title>
+    <meta name="description" content="Computer Science student at VSSUT with expertise in full-stack development, artificial intelligence, and cloud technologies. Currently interning at Codecis AI." />
+    <meta name="author" content="Trishna Das" />
+    <meta name="keywords" content="Full Stack Developer, AI Engineer, Computer Science, Python, React, Machine Learning, DevOps" />
 
-    <meta property="og:title" content="trishna-das-portfolio-showcase" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Trishna Das - Full Stack Developer & AI Engineer" />
+    <meta property="og:description" content="Computer Science student at VSSUT with expertise in full-stack development, artificial intelligence, and cloud technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
 
   <body>
