--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Trishna Das - Full Stack Developer & AI Engineer</title>
     <meta name="description" content="Computer Science student at VSSUT with expertise in full-stack development, artificial intelligence, and cloud technologies. Currently interning at Codecis AI." />
     <meta name="author" content="Trishna Das" />
     <meta name="keywords" content="Full Stack Developer, AI Engineer, Computer Science, Python, React, Machine Learning, DevOps" />
 
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Trishna Das - Full Stack Developer & AI Engineer" />
     <meta property="og:description" content="Computer Science student at VSSUT with expertise in full-stack development, artificial intelligence, and cloud technologies." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta name="twitter:site" content="@trishnadas" />
+    <meta name="twitter:image" content="/og-image.png" />
+
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
